Added to Kresge funding proposal.

--- a/doc/financial/kresge_funding_proposal/kresge_proposal.tex
+++ b/doc/financial/kresge_funding_proposal/kresge_proposal.tex
@@ -46,6 +46,11 @@ This project is composed of two systems, a command center and autonomous vehicle
 
 \subsection*{Procedure}
 
+In order to accomplish our objective of designing and implementing a device that can save someone from drowning, we are approaching this project in three phases: research and design, testing, and integration. Currently, we are in the research and design phase, which involves 
+
+
+integration is an iterative process that may lead us back into the testing phase depending on the success that 
+
 \subsection*{Qualifications}
 
 \subsection*{Benefits}
