--- a/doc/financial/kresge_funding_proposal/kresge_proposal.tex
+++ b/doc/financial/kresge_funding_proposal/kresge_proposal.tex
@@ -31,7 +31,7 @@
 \end{center}
 
 \section*{Abstract}
-In the United States, there have been a reported 99 people that have drowned with a good number of them occurring while a lifeguard was on duty, in the past year alone. Lifeguards rescued around 63,000 individuals at risk of drowning. Last year alone, around 99 people have drowned with a good number of them occurring while a lifeguard was on duty. We are proposing an autonomous surface vehicle to aid and assist drowning victims during the critical minutes before help can reach them.\\
+In the United States, there have been a reported 99 people that have drowned in the past year alone, with a good number of them occurring while a lifeguard was on duty. In that year, there were 63,000 individual cases where Lifeguards rescued around 63,000 individuals at risk of drowning. Last year alone, around 99 people have drowned with a good number of them occurring while a lifeguard was on duty. We are proposing an autonomous surface vehicle to aid and assist drowning victims during the critical minutes before help can reach them.\\
 
 
 This project We are building an autonomous surface vessel that will aid a lifeguard on the beach in order to save someone from drowning. Our project allows a lifeguard to quickly target a drowning person with a magnifying scope that will obtain their GPS coordinates using calibrated encoders, and then communicate them to an autonomous boat located in the water beyond the shore break. The boat will, using its own on-board GPS, navigate itself to the person and allow them to hang on and stay afloat until the lifeguard arrives. This project aims to keep beaches safer by reducing the risk of drowning. This is an example of how I am most inclined to work on projects like this one that can preserve or improve the quality of life for all people.
