Added Background to Kresge Doc

--- a/doc/financial/kresge_funding_proposal/kresge_proposal.tex
+++ b/doc/financial/kresge_funding_proposal/kresge_proposal.tex
@@ -42,6 +42,10 @@ This project is composed of two systems, a command center and autonomous vehicle
 
 \subsection*{Background}
 
+The city of Los Angeles has employed the use of a device named EMILY (Emergency Integrated Lifesaving Lanyard) on their state beaches to save drowning victims. The device is deployed from the shore and remotely controlled by a human operator. Although it offers assistance, there exists multiple drawbacks of the system as a whole. The first is that it requires an operator, meaning that a lifeguard will be occupied during a rescue. The second is that the device must fight against the wave breaks in order to reach a victim. This implies delay when navigating to the victim. The third drawback is that the device is limited by the field of view and skill of the operator.\\
+
+We propose a fully autonomous system that will navigate to the location of a drowning victim, offering assistance as a lifeguard is deployed from shore. This eliminates the need for a human operator, allowing the lifeguard to swim out to the victim as the device navigates to the victim. The device will be stationed within the water at a certain distance from the shore and beyond the wave breaks so that it may arrive at a drowning victims location swiftly.  
+
 \subsection*{Objective}
 
 \subsection*{Procedure}
