Added Shah's objective.

--- a/doc/financial/kresge_funding_proposal/kresge_proposal.tex
+++ b/doc/financial/kresge_funding_proposal/kresge_proposal.tex
@@ -48,6 +48,8 @@ We propose a fully autonomous system that will navigate to the location of a dro
 
 \subsection*{Objective}
 
+Motivated by the number of drowning cases each year, The Autonomous Lifeguard Senior Design Group aims to develop an assistive, life-preserving, vessel with the capability of navigating to and locating drowning individuals in open water. This vessel, the Autonomous Lifeguard Assistant (AtLAs), will be stationed in the open water on a beach or in the lake. The AtLAs will be coupled with an onshore control tower, the Command Post Acquisition System (ComPAS), that transmits the GPS coordinates of drowning individuals that have been spotted by a lifeguard. While the lifeguard swims to the drowning individual, the AtLAs will use its triple motor propulsion system to arrive at the victims location at least three times as fast as a lifeguard would. Furthermore, the entire Autonomous Lifeguard System is designed to be a useful and affordable product for the public. The ultimate goal is to create a practical and superior aquatic life-saving system that requires minimally invasive operation, in this case, allowing the lifeguard to make their way to the victim in parallel with the machine.
+
 \subsection*{Procedure}
 
 In order to accomplish our objective of designing and implementing a device that can save someone from drowning, we are approaching this project in three phases: research and design, testing, and integration. Currently, we are in the research and design phase, which involves 
