Added unfinished procedure section.

--- a/doc/financial/kresge_funding_proposal/kresge_proposal.tex
+++ b/doc/financial/kresge_funding_proposal/kresge_proposal.tex
@@ -52,10 +52,16 @@ Motivated by the number of drowning cases each year, The Autonomous Lifeguard Se
 
 \subsection*{Procedure}
 
-In order to accomplish our objective of designing and implementing a device that can save someone from drowning, we are approaching this project in three phases: research and design, testing, and integration. Currently, we are in the research and design phase, which involves 
+
+In order to accomplish our objective of designing and implementing a device that can save someone from drowning, we propose a three phase approach: design, testing, and integration. In the design stage, which we are currently in, a majority of the research was accomplished to establish a solution to the task, and physical and mathematical models were created to allow for an enlightened analysis of the proposed solution. Next, the models established in the design phase are to be rigorously examined in the testing phase to acquire real data to prove the accuracy and robustness of the model. Lastly, the integration stage, in which the minimum specifications are to be addressed, involves assembling the final product by combining all of the refined modules into a physical implementation that meets the specifications. The three phases encompass the design life of the project. 
+
+Since mid November, our team has made significant progress in completing the research and design phase for our project. We began by doing extensive background research related to the sensors and actuators, as well as the basic physical capabilities  required. This led to modeling and physical calculation related to the buoyancy, hydrodynamics, motors,  , such as buoyancy calculation. Using that research, we formulated various initial solutions, and then, with the input of trusted and qualified mentors, proceeded to amend, revise, and ultimately converse onto the most effective  solution.
+
+The testing phase includes a exquisitely thorough 
 
 
 integration is an iterative process that may lead us back into the testing phase depending on the success that 
+
 
 \subsection*{Qualifications}
 
