Small change to kresge proposal, reorganized doc folder.

--- a/doc/financial/kresge_funding_proposal/kresge_proposal.tex
+++ b/doc/financial/kresge_funding_proposal/kresge_proposal.tex
@@ -59,7 +59,7 @@ Since mid November, our team has made significant progress in completing the res
 
 The next phase is integration. In the integration phase, we will be combining the working prototypes from the design phase into a complete product. This will involve finalizing the command center (ComPAS) and improving its robustness for transportation to the test location. The AtLAs will also need to be assembled and finalized, and outfitted with buoyancy foam and protective boat fenders. Also, we will need to reinforce both the AtLAs and the ComPAS and ensure that they are properly waterproofed and protected against the elements. Once the integration of our systems is complete, we can begin testing and assessing the performance of the systems.\\
 
-The testing phase is the third and final stage. It includes a thorough investigation of our assembled systems and their ability to meet the established objectives. Unit tests have already begun to been created that will help streamline this process, and prevent fixes from being introduced to address a particular issue and then adversely affect another piece of the system without being detected.  As a final test to ensure that our system works as specified, we will place the ComPAS on the shore of a lake or beach in Santa Cruz, deploy the AtLAs in the water, and then one of us will swim out to a designated point to be located with the ComPAS and saved by the AtLAs. Once our system can pass this minimum specification we will have completed our project.
+The testing phase is the third and final stage. It includes a thorough investigation of our assembled systems and their ability to meet the established objectives. Unit tests have been created that will help streamline this process and prevent fixes from being introduced that adversely affect another piece of the system without being detected.  As a final test to ensure that our system works as specified, we will place the ComPAS on the shore of a lake or beach in Santa Cruz, deploy the AtLAs in the water, and then one of us will swim out to a designated point to be located with the ComPAS and saved by the AtLAs. Once our system can pass this minimum specification we will have completed our project.
 
 \subsection*{Qualifications}
 
