Newsletter for March now has an updated Support Section and has been looked over for corrections

--- a/doc/newsletter/march/march-newsletter.tex
+++ b/doc/newsletter/march/march-newsletter.tex
@@ -156,7 +156,7 @@ Following this weekend's testing, we will continue to work on the navigation sys
 % -----
 \NewsItem{Support}
 \NewsAuthor{D. Deo}
-The Autonomous Lifeguard Group is moving quite swiftly and is hopeful that the next phases of the project will yield exceptional results. As a devoted team, we are currently funding the project entirely ourselves. Optimistic about the future of the Autonomous Lifeguard Project, we would appreciate any form of support that would help the project advance. Donations are welcome and can be submitted via our website. All considerations will be recognized by the team.
+The Autonomous Lifeguard Group would like to extend their utmost appreciation to those who have supported our cause. With the help of our donors, we have been able to partially fund our ambitious project. Done with the ComPAS, we will now focus our efforts on the AtLAs in hopes to complete our project within the coming months. We do ask that anyone interested in contributing to our project visit our team website and donate. All forms of support are welcome.
 \end{multicols}
 % -----
 \end{document} 
